# pasters

./: Cargo.toml  README.md
src/: app.rs  clipboard.rs  main.rs
