[package]
name = "pasters"
version = "0.1.0"
edition = "2021"
authors = ["Pone Ding <poneding@gmail.com>"]
description = "pasters is a clipboard manager with a GUI."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["pasters"]

[dependencies]
egui_plot = "0.30.0"
egui_extras = { version = "0.30.0", features = ["default"] }
egui = { version = "0.30.0", default-features = false, features = [
    "color-hex",
] }
arboard = "3.4.1"
eframe = { version = "0.30.0", features = ["default"] }
clipboard = "0.5.0"
global-hotkey = "0.6.3"
shortcutd = "0.2.0"
keyboard-types = "0.7.0"
